altered colour for Q4; added preventDefault to suppress jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@
 	
 }
 .svg_show.q4{
-	fill: #ffffe6;
+	fill: #ffffa5;
 	
 }
 
